<resources>
    <string name="app_name">Treasure Hunt</string>
    <string name="tasks">Tasks</string>
    <string name="dump">Pikachu was not necessarily destined for great popularity. He was not a standout “pocket monster” in Nintendo’s first Game Boy Pokémon title, Red and Green, but was one among 151 creatures that children could choose to play with.</string>
    <string name="reach_auditorium">Reach Treasure Triumph</string>
    <string name="auditorium">Map Roulette</string>
    <string name="reach_4h">Reach Map Roulette</string>
    <string name="_4h">Map Roulette</string>
    <string name="sac">Wheel of Treasure</string>
    <string name="reach_sac">Reach Wheel of Treasure</string>
    <string name="ground">SmashTech Frenzy</string>
    <string name="reach_ground">Reach SmashTech Frenzy</string>
    <string name="open_air_gym">Fitness for a Clue</string>
    <string name="reach_open_air_gym">Reach Fitness for a Clue</string>
    <string name="presents">Presents</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="hint">Hint</string>
    <string name="your_team_is">Your team is</string>
    <string name="start_time_5_00_pm">Start Time : 1:00 PM</string>
    <string name="start">Start</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="bonus_location">Bonus Location</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="content_sac">It\'s good to see that you\'re progressing. Here, you must employ both your physical and mental resources. You must employ an exclusive positioning method using AR to access the points, which necessitates that you build a particular pattern by standing in predetermined locations.</string>
    <string name="content_audi">Here, the team members must solve the image riddle to obtain a QR code that takes you to a video that encodes a mysterious form of morse code. They receive a hint to the next location after cracking this code.</string>
    <string name="content_ground">Posters of various characters are affixed to the ground walls in this location.The objective of the game is to score points by hitting the target with the ball. The more accurate the throw, the higher the score.</string>
    <string name="content_gym">An open CV is used as the primary component at this location, and participants must perform some sort of physical activity. The teams receive their next destination clue after finishing this job.</string>
    <string name="content_4h">Teams must solve the map puzzles to find the locations on the map where they can receive bonus points. In order to maximise points while avoiding penalties, the squad must find the landmarks and take a selfie in a particular direction of the landmark.</string>
    <string name="content_sp">The treasure quest officially starts at this point. The general plot of the treasure search will be explained to all of the teams as they begin at SP. To unravel the hunt, the hunters must utilise cunning. We make the puzzle into a treasure hunt by leaving a trail of hints and puzzles that will lead to the victory\'s location.</string>
</resources>