<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSkin"
    tools:context=".locations.DestinationSACActivity">


    <TextView
        android:id="@+id/tvCheckpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/checkpoints"
        android:textColor="@color/colorRedDark"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_checkpoint"
        app:drawableTint="@color/colorRedDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/coin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="50"
            android:textColor="@color/colorRedDark"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/reach_sac"
        android:textColor="@color/colorRedDark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/money_heist_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/money_heist_character"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/money_heist_character"
        app:layout_constraintBottom_toTopOf="@id/layoutUserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layoutUserInput"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/round_box"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lacasa"
            android:letterSpacing="0.03"
            android:text="@string/tasks"
            android:textColor="@color/colorSkin"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="30dp"
            android:text="@string/dump"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorSkin"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/hint"
        android:textColor="@color/colorRedLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorSkin"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/next"
        android:textColor="@color/colorRedLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>