<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSkin"
    tools:context=".ProgressActivity">

    <TextView
        android:id="@+id/text_checkpoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lacasa"
        android:letterSpacing="0.05"
        android:text="@string/checkpoints"
        android:textColor="@color/colorRedDark"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_checkpoints" />


    <TextView
        android:id="@+id/text_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/bonus_location"
        android:textColor="@color/colorRedDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvProgress" />


    <TextView
        android:id="@+id/tvLocationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/round_box_red"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.05"
        android:paddingVertical="10dp"
        android:text="@string/_4h"
        android:textAlignment="center"
        android:textColor="@color/colorSkin"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/text_bonus"
        tools:layout_editor_absoluteX="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>