<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSkin"
    tools:context=".DestinationAuditoriumActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reach_auditorium"
        android:textSize="35dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/colorRedDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/money_heist_character"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/money_heist_character"
        app:layout_constraintBottom_toTopOf="@id/layoutDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layoutDescription"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/round_box"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textColor="@color/colorSkin"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:text="@string/dump"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorSkin"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="Hint"
        android:textColor="@color/colorRedLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorSkin"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="Next"
        android:textColor="@color/colorRedLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>